--- a/src/app/Components/layout/Pages/dash-board/dash-board.component.css
+++ b/src/app/Components/layout/Pages/dash-board/dash-board.component.css
@@ -7,3 +7,41 @@
   height: 50px !important;
   width: 50px !important;
 }
+
+.card-info {
+  width: 100%;
+  box-sizing: border-box;
+}
+
+
+mat-card {
+  margin-top: 20px;
+  margin-right: 40px;
+  margin-bottom: 40px;
+  margin-left: 40px;
+}
+
+
+h1 {
+  margin: 20px 0px 0px 40px;
+}
+
+
+@media (max-width: 397px) {
+  mat-card {
+    margin: 20px 10px;
+  }
+  h1 {
+    margin-left: 8px;
+  }
+}
+
+/* .mat-grid-list.responsive-grid {
+  @media (min-width: 397px) {
+    cols: 2;
+  }
+
+  @media (min-width: 600px) {
+    cols: 3;
+  }
+} */
