--- a/src/app/Components/layout/Pages/dash-board/dash-board.component.html
+++ b/src/app/Components/layout/Pages/dash-board/dash-board.component.html
@@ -1,6 +1,6 @@
-<h1 style="margin: 20px 0px 0px 40px;"> DashBoard - resumen ultima semana</h1>
+<h1> DashBoard - resumen ultima semana</h1>
 
-<mat-card style="margin: 20px 40px 40px 40px;">
+<mat-card>
 
   <mat-card-content>
 
