--- a/src/app/Components/layout/Pages/venta/venta.component.css
+++ b/src/app/Components/layout/Pages/venta/venta.component.css
@@ -5,3 +5,34 @@
 table {
   width: 100%;
 }
+
+mat-card {
+  margin-top: 20px;
+  margin-right: 40px;
+  margin-bottom: 40px;
+  margin-left: 40px;
+}
+
+h1 {
+  margin: 20px 0px 0px 40px;
+}
+
+@media (max-width: 990px) {
+  .full-width {
+    width: 100% !important;
+  }
+}
+
+@media (max-width: 397px) {
+  mat-card {
+    margin: 20px 10px;
+  }
+  h1 {
+    margin-left: 8px;
+  }
+  .full-width {
+    width: 100% !important;
+  }
+
+}
+
