--- a/src/app/Components/login/login.component.css
+++ b/src/app/Components/login/login.component.css
@@ -1,22 +1,76 @@
 .body {
   display: flex;
+  flex-direction: column;
   justify-content: center;
-  height: 100%;
+  height: 100vh;
   align-items: center;
-  background-color: #f5f5f5;
+  background-color: #003366ae;
 }
 
 .loginCard {
+  width: 100%;
   max-width: 328px !important;
   margin: 2em auto;
   text-align: center;
   max-height: 600px;
-}
-
-.header {
-  text-align: center;
+  position: relative;
+  z-index: 1;
 }
 
 .full-width {
   width: 80%;
+}
+
+.headerPrincipal {
+  position: relative;
+  color: #ffffff; /* Color del texto del encabezado */
+  text-align: center;
+  padding: 16px;
+  font-size: 26px;
+  font-weight: 600;
+  z-index: 2; /* Asegura que el encabezado esté sobre el mat-card */
+}
+
+.header {
+  text-align: center;
+  padding: 16px;
+}
+
+/* Estilos del formulario */
+.custom-heading {
+  color: #1976D2; /* Color primario */
+}
+
+.custom-card-content {
+  text-align: center;
+}
+
+mat-form-field {
+  width: 100%;
+}
+
+.custom-label {
+  color: #555; /* Color del texto del formulario */
+}
+
+.custom-button {
+  margin-top: 20px;
+}
+
+/* Estilos del pie de página */
+.custom-footer {
+  padding: 16px;
+  text-align: center;
+}
+
+/* Otros estilos opcionales */
+.mat-raised-button {
+  color: #fff; /* Color de los iconos */
+}
+.mat-raised-button.mat-button-disabled {
+  color: #959393; /* Color de los iconos */
+}
+
+mat-raised-button {
+  background-color: #1976D2; /* Color de fondo del botón principal */
 }
