--- a/src/app/Components/layout/Pages/dash-board/dash-board.component.html
+++ b/src/app/Components/layout/Pages/dash-board/dash-board.component.html
@@ -4,7 +4,7 @@
 
   <mat-card-content>
 
-    <mat-grid-list cols="3" rowHeight="100px">
+    <mat-grid-list [cols]="numCols" rowHeight="100px">
 
       <mat-grid-tile>
         <mat-card class="card-info">
