--- a/src/app/Components/layout/Pages/venta/venta.component.html
+++ b/src/app/Components/layout/Pages/venta/venta.component.html
@@ -1,61 +1,78 @@
-<h1 style="margin: 20px 0px 0px 40px;">Nueva Venta</h1>
+<h1>Nueva Venta</h1>
 
 <mat-card>
-
   <mat-card-content>
-    <form [formGroup]="formularioProductoVenta" (ngSubmit)="agregarProductoParaVenta()">
-        <mat-grid-list cols="4" rowHeight="80px">
-
-          <mat-grid-tile [colspan]="2">
-            <mat-form-field class="full-width" appearance="fill">
-              <mat-label>Producto</mat-label>
-              <input matInput type="text" placeholder="Buscar..." [matAutocomplete]="auto" formControlName="producto">
-              <mat-autocomplete autoActiveFirstOption #auto="matAutocomplete"
+    <form
+      [formGroup]="formularioProductoVenta"
+      (ngSubmit)="agregarProductoParaVenta()"
+    >
+      <mat-grid-list [cols]="numCols" rowHeight="80px">
+        <mat-grid-tile >
+          <mat-form-field class="full-width spacio" appearance="fill">
+            <mat-label>Producto</mat-label>
+            <input
+              matInput
+              type="text"
+              placeholder="Buscar..."
+              [matAutocomplete]="auto"
+              formControlName="producto"
+            />
+            <mat-autocomplete
+              autoActiveFirstOption
+              #auto="matAutocomplete"
               (optionSelected)="productoParaVenta($event)"
-              [displayWith]="mostrarProducto">
-
-              <mat-option *ngFor="let option of listaProductosFiltro" [value]="option">{{option.nombre}}</mat-option>
-
+              [displayWith]="mostrarProducto"
+            >
+              <mat-option
+                *ngFor="let option of listaProductosFiltro"
+                [value]="option"
+                >{{ option.nombre }}</mat-option
+              >
             </mat-autocomplete>
-            </mat-form-field>
-          </mat-grid-tile>
+          </mat-form-field>
+        </mat-grid-tile>
 
-          <mat-grid-tile>
-            <mat-form-field class="full-width" appearance="fill" style="margin-left: 40px;">
-                <mat-label>Cantidad</mat-label>
-                <input matInput type="number" formControlName="cantidad">
-            </mat-form-field>
-          </mat-grid-tile>
+        <mat-grid-tile>
+          <mat-form-field
+            class="full-width"
+            appearance="fill"
+            style="margin-left: 40px"
+          >
+            <mat-label>Cantidad</mat-label>
+            <input matInput type="number" formControlName="cantidad" />
+          </mat-form-field>
+        </mat-grid-tile>
 
-          <mat-grid-tile>
-            <button mat-raised-button color="primary" style="width: 80%;" [disabled]="formularioProductoVenta.invalid">
-              <mat-icon mat-list-icon>add</mat-icon>Agregar
-            </button>
-          </mat-grid-tile>
+        <mat-grid-tile>
+          <mat-form-field class="full-width spacio" appearance="fill" style="margin-left: 40px">
+            <mat-label>Tipo de pago</mat-label>
+            <mat-select [(value)]="tipoPagoPorDefecto">
+              <mat-option value="Efectivo">Efectivo</mat-option>
+              <mat-option value="Tarjeta">Tarjeta</mat-option>
+            </mat-select>
+          </mat-form-field>
+        </mat-grid-tile>
 
-        </mat-grid-list>
+        <mat-grid-tile>
+          <button
+            mat-raised-button
+            class="full-width"
+            color="primary"
+            [disabled]="formularioProductoVenta.invalid"
+          >
+            <mat-icon mat-list-icon>add</mat-icon>Agregar
+          </button>
+        </mat-grid-tile>
+
+        <mat-grid-tile >
+          <button mat-raised-button class="full-width" color="accent" style="width: 100%; margin-left: 40px">
+            Total: C/. {{ totalPagar.toFixed(2) }}
+          </button>
+        </mat-grid-tile>
+
+      </mat-grid-list>
     </form>
 
-    <mat-grid-list cols="4" rowHeight="80px">
-      <mat-grid-tile [colspan]="2"></mat-grid-tile>
-
-      <mat-grid-tile>
-        <mat-form-field class="full-width" appearance="fill" style="margin-left: 40px;">
-          <mat-label>Tipo de pago</mat-label>
-          <mat-select [(value)]="tipoPagoPorDefecto">
-            <mat-option value="Efectivo">Efectivo</mat-option>
-            <mat-option value="Tarjeta">Tarjeta</mat-option>
-          </mat-select>
-      </mat-form-field>
-      </mat-grid-tile>
-
-      <mat-grid-tile>
-        <button mat-raised-button color="accent" style="width: 80%;">
-          Total: C/. {{totalPagar.toFixed(2)}}
-        </button>
-      </mat-grid-tile>
-
-    </mat-grid-list>
 
     <div class="mat-elevation-z2">
 
@@ -99,19 +116,20 @@
 
     </div>
 
-    <mat-grid-list cols="4" rowHeight="80px">
-
-      <mat-grid-tile [colspan]="3"></mat-grid-tile>
+    <mat-grid-list [cols]="numCols" rowHeight="80px" class="full-width">
       <mat-grid-tile>
-        <button mat-raised-button color="primary" style="width: 80%;" [disabled]="listaProductosParaVenta.length < 1 || bloquearBotonRegistrar"
-        (click)="registrarVenta()">
-          <mat-icon >new_label</mat-icon>Registrar
+        <button
+          mat-raised-button
+          color="primary"
+          style="width: 100%"
+          [disabled]="
+            listaProductosParaVenta.length < 1 || bloquearBotonRegistrar
+          "
+          (click)="registrarVenta()"
+        >
+          <mat-icon>new_label</mat-icon>Registrar
         </button>
       </mat-grid-tile>
-
     </mat-grid-list>
-
-
   </mat-card-content>
-
 </mat-card>
