--- a/src/app/Components/layout/Pages/producto/producto.component.html
+++ b/src/app/Components/layout/Pages/producto/producto.component.html
@@ -1,6 +1,6 @@
-<h1 style="margin: 20px 0px 0px 40px;"> Productos</h1>
+<h1> Productos</h1>
 
-<mat-card style="margin: 20px 40px 40px 40px;">
+<mat-card>
 
   <mat-card-title>
     <button mat-raised-button color="primary" (click)="nuevoProducto()">
